<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/reset_popup_elements"
    style="@android:style/Theme.Dialog"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/white_round_bg"
    android:orientation="vertical">
    <!-- Reset popup title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/White"
        android:gravity="center"
        android:padding="5dp"
        android:paddingEnd="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingStart="30dp"
        android:text="@string/reset"
        android:textColor="@color/Red"
        android:textSize="35sp"
        android:textStyle="bold" />
    <!-- Just Choose title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/JUST_CHOOSE"
        android:textAllCaps="true"
        android:textColor="@color/DrakBlue" />
    <!-- Reset to 15 button -->
    <Button
        android:id="@+id/reset15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/red_round_bg"
        android:padding="16dp"
        android:text="@string/fifteenAll"
        android:textColor="@color/White"
        android:textSize="24sp"
        android:textStyle="bold" />
    <!-- Reset to 17 button -->
    <Button
        android:id="@+id/reset17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/red_round_bg"
        android:padding="16dp"
        android:text="@string/seventeenAll"
        android:textSize="24sp"
        android:textStyle="bold" />
    <!-- Reset to 0 button -->
    <Button
        android:id="@+id/reset0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/red_round_bg"
        android:padding="16dp"
        android:text="@string/ZeroAll"
        android:textColor="@color/White"
        android:textSize="24sp"
        android:textStyle="bold" />
    <!-- Back button -->
    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/dark_round_bg"
        android:gravity="center"
        android:text="@string/RESETBACK"
        android:textColor="@color/White"
        android:textSize="24sp"
        android:textStyle="bold" />
</LinearLayout>