<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DrakBlue"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".WelcomeSplashActivity">

    <LinearLayout
        android:id="@+id/welcome_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hashLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:drawableTop="@drawable/ppssc_logo"
            android:gravity="center"
            android:text="@string/WISEMO"
            android:textColor="@color/Gray" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Enter_names_then_start"
            android:textAllCaps="true"
            android:textColor="@color/White"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/left_team_name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/Left_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/White"
                android:textColorHint="@color/darkGray" />

            <EditText
                android:id="@+id/right_team_name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/Right_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/White"
                android:textColorHint="@color/darkGray" />
        </LinearLayout>

        <Button
            android:id="@+id/startBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/red_round_bg"
            android:singleLine="true"
            android:text="@string/Start"
            android:textColor="@color/White"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>