<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    tools:context=".WelcomeSplashActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/ToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:minHeight="?attr/actionBarSize" />
    <!--app:theme="@style/ThemeOverlay.AppCompat.Dark"/>-->
    <!--app:popupTheme="@style/Theme.AppCompat.Light"/>-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ToolBar"
        android:background="@drawable/gradient"
        android:baselineAligned="false">
        <!-- Start Left Vertical linear -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <!-- Left Name -->
            <TextView
                android:id="@+id/left_team_name"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/dark_round_bg"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/Left_Team"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:textSize="40sp"
                android:textStyle="bold"/>
            <!-- Left Score -->
            <TextView
                android:id="@+id/left_score"
                android:layout_width="wrap_content"
                android:layout_height="135dp"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/zero"
                android:textColor="#ffffff"
                android:textSize="120sp"
                android:textStyle="bold" />
            <!-- Start Left Score Buttons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/dark_round_bg"
                android:orientation="vertical">
                <!-- Left Increment Button -->
                <ImageButton
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/inc_layer_list"
                    android:contentDescription="@string/increment"
                    android:onClick="incLeftOne" />
                <!-- Left Decrement Button -->
                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/dec_layer_list"
                    android:contentDescription="@string/decrement"
                    android:onClick="decLeftOne" />
                <!-- End Left Score Buttons -->
            </LinearLayout>
            <!-- End Left Vertical linear -->
        </LinearLayout>
        <!-- Start Right Vertical Linear -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <!-- Right Name -->
            <TextView
                android:id="@+id/right_team_name"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/dark_round_bg"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/Right_Team"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:textSize="40sp"
                android:textStyle="bold"/>
            <!-- Right Score -->
            <TextView
                android:id="@+id/right_score"
                android:layout_width="wrap_content"
                android:layout_height="135dp"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/zero"
                android:textColor="#ffffff"
                android:textSize="120sp"
                android:textStyle="bold" />
            <!-- Start Right Score Buttons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/dark_round_bg"
                android:orientation="vertical">
                <!-- Right Increment Button -->
                <ImageButton
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/inc_layer_list"
                    android:contentDescription="@string/increment"
                    android:onClick="incRightOne" />
                <!-- Right Decrement Button -->
                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/dec_layer_list"
                    android:contentDescription="@string/decrement"
                    android:onClick="decRightOne" />
                <!-- End Right Score Buttons -->
            </LinearLayout>
            <!-- End Right Vertical linear -->
        </LinearLayout>
    </LinearLayout>
    <!-- Center Lines / Table Net -->
    <View
        android:layout_width="2dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ToolBar"
        android:layout_centerInParent="true"
        android:background="@color/White" />
    <!-- Reset Button -->
    <ImageButton
        android:id="@+id/reset"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:background="@drawable/reset_layer_list"
        android:contentDescription="@string/reset" />
    <!-- Standing Button -->
    <Button
        android:id="@+id/standingsBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/reset"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/standings_list"
        android:textStyle="bold" />
    <!-- Swap Button -->
    <Button
        android:id="@+id/swapNamesBtn"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_above="@+id/reset"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/swap_h_layer_list" />
</RelativeLayout>